@@ -161,81 +161,3 @@ void glatex_replace_special_character()
 		g_free(new);
 	}
 }
-
-
-/* Based on reimplementation at HTMLTable plugin of Geany-Plugins package
- * originally in GPL2+ */
-/* gboolean header is not yet used but to don't break API later its already
- * defined */
-void glatex_convert_to_table(G_GNUC_UNUSED gboolean header)
-{
-	GeanyDocument *doc = NULL;
-	doc = document_get_current();
-
-	g_return_if_fail(doc != NULL);
-	if (sci_has_selection(doc->editor->sci))
-	{
-		gchar *selection = NULL;
-		gchar **rows = NULL;
-		GString *replacement_str = NULL;
-		gchar *replacement = NULL;
-
-		/* Actually grabbing selection and splitting it into single
-		 * lines we will work on later */
-		selection = sci_get_selection_contents(doc->editor->sci);
-		rows = g_strsplit_set(selection, "\r\n", -1);
-		g_free(selection);
-
-		/* Checking whether we do have something we can work on - Returning if not */
-		if (rows != NULL)
-		{
-			/* Adding header to replacement */
-			guint i;
-			guint j;
-
-			replacement_str = g_string_new("\\begin{tabular}{}\n");
-
-			/* Iteration onto rows and building up lines of table for
-			 * replacement */
-			for (i = 0; rows[i] != NULL ; i++)
-			{
-				gchar **columns = NULL;
-				columns = g_strsplit_set(rows[i], "\t", -1);
-
-				for (j = 0; columns[j] != NULL; j++)
-				{
-					if (j > 0)
-					{
-						g_string_append(replacement_str, "  &  ");
-					}
-					g_string_append(replacement_str, columns[j]);
-				}
-
-				g_string_append(replacement_str, "\\\\\n");
-
-				g_free(columns);
-			}
-		}
-
-		/* Adding the footer of table */
-
-		g_string_append(replacement_str, "\\end{tabular}\n");
-
-		/* Replacing selection with new table */
-		replacement = g_string_free(replacement_str, FALSE);
-		sci_replace_sel(doc->editor->sci, replacement);
-
-		g_free(rows);
-		g_free(replacement);
-	}
-	else
-	{
-		/* OK. Something went not as expected.
-		 * We did have a selection but cannot parse it into rows.
-		 * Aborting */
-		g_warning(_("Something went went wrong on parsing selection. Aborting"));
-		return;
-	} /* Selection was given -- end
-	   * in case of there was no selection we are just doing nothing */
-	return;
-}
